--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "filmmania-app",
   "version": "0.1.0",
+  "homepage": "https://vast7al.github.io/filmmania-app",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -19,7 +21,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
